src/libbulletc/src/btSoftBody_wrap.h



	EXPORT btSoftBody_Body* btSoftBody_Body_new();

	EXPORT btSoftBody_Body* btSoftBody_Body_new2(btCollisionObject* colObj);

	EXPORT btSoftBody_Body* btSoftBody_Body_new3(btSoftBody_Cluster* p);

	EXPORT void btSoftBody_Body_activate(btSoftBody_Body* obj);

	EXPORT void btSoftBody_Body_angularVelocity(btSoftBody_Body* obj, btScalar* rpos);

	EXPORT void btSoftBody_Body_angularVelocity2(btSoftBody_Body* obj);

	EXPORT void btSoftBody_Body_applyAImpulse(btSoftBody_Body* obj, btSoftBody_Impulse* impulse);

	EXPORT void btSoftBody_Body_applyDAImpulse(btSoftBody_Body* obj, btScalar* impulse);

	EXPORT void btSoftBody_Body_applyDCImpulse(btSoftBody_Body* obj, btScalar* impulse);

	EXPORT void btSoftBody_Body_applyDImpulse(btSoftBody_Body* obj, btScalar* impulse, btScalar* rpos);

	EXPORT void btSoftBody_Body_applyImpulse(btSoftBody_Body* obj, btSoftBody_Impulse* impulse, btScalar* rpos);

	EXPORT void btSoftBody_Body_applyVAImpulse(btSoftBody_Body* obj, btScalar* impulse);

	EXPORT void btSoftBody_Body_applyVImpulse(btSoftBody_Body* obj, btScalar* impulse, btScalar* rpos);

	EXPORT btCollisionObject* btSoftBody_Body_getCollisionObject(btSoftBody_Body* obj);

	EXPORT btRigidBody* btSoftBody_Body_getRigid(btSoftBody_Body* obj);

	EXPORT btSoftBody_Cluster* btSoftBody_Body_getSoft(btSoftBody_Body* obj);

	EXPORT btScalar btSoftBody_Body_invMass(btSoftBody_Body* obj);

	EXPORT btMatrix3x3* btSoftBody_Body_invWorldInertia(btSoftBody_Body* obj);

	EXPORT void btSoftBody_Body_linearVelocity(btSoftBody_Body* obj);

	EXPORT void btSoftBody_Body_setCollisionObject(btSoftBody_Body* obj, btCollisionObject* value);

	EXPORT void btSoftBody_Body_setRigid(btSoftBody_Body* obj, btRigidBody* value);

	EXPORT void btSoftBody_Body_setSoft(btSoftBody_Body* obj, btSoftBody_Cluster* value);

	EXPORT void btSoftBody_Body_velocity(btSoftBody_Body* obj, btScalar* rpos);

	EXPORT btScalar* btSoftBody_Body_xform(btSoftBody_Body* obj);

	EXPORT void btSoftBody_Body_delete(btSoftBody_Body* obj);


	EXPORT btSoftBody_Joint_eType* btSoftBody_Joint_eType_new();

	EXPORT void btSoftBody_Joint_eType_delete(btSoftBody_Joint_eType* obj);


	EXPORT btSoftBody_Joint_Specs* btSoftBody_Joint_Specs_new();

	EXPORT btScalar btSoftBody_Joint_Specs_getCfm(btSoftBody_Joint_Specs* obj);

	EXPORT btScalar btSoftBody_Joint_Specs_getErp(btSoftBody_Joint_Specs* obj);

	EXPORT btScalar btSoftBody_Joint_Specs_getSplit(btSoftBody_Joint_Specs* obj);

	EXPORT void btSoftBody_Joint_Specs_setCfm(btSoftBody_Joint_Specs* obj, btScalar value);

	EXPORT void btSoftBody_Joint_Specs_setErp(btSoftBody_Joint_Specs* obj, btScalar value);

	EXPORT void btSoftBody_Joint_Specs_setSplit(btSoftBody_Joint_Specs* obj, btScalar value);

	EXPORT void btSoftBody_Joint_Specs_delete(btSoftBody_Joint_Specs* obj);

	EXPORT btSoftBody_Body* btSoftBody_Joint_getBodies(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getCfm(btSoftBody_Joint* obj);

	EXPORT bool btSoftBody_Joint_getDelete(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getDrift(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getErp(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getMassmatrix(btSoftBody_Joint* obj);

	EXPORT btScalar* btSoftBody_Joint_getRefs(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_getSdrift(btSoftBody_Joint* obj);

	EXPORT btScalar btSoftBody_Joint_getSplit(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_Prepare(btSoftBody_Joint* obj, btScalar dt, int iterations);

	EXPORT void btSoftBody_Joint_setBodies(btSoftBody_Joint* obj, btSoftBody_Body* value);

	EXPORT void btSoftBody_Joint_setCfm(btSoftBody_Joint* obj, btScalar value);

	EXPORT void btSoftBody_Joint_setDelete(btSoftBody_Joint* obj, bool value);

	//EXPORT void btSoftBody_Joint_setDrift(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setErp(btSoftBody_Joint* obj, btScalar value);

	//EXPORT void btSoftBody_Joint_setMassmatrix(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setRefs(btSoftBody_Joint* obj, btScalar* value);

	//EXPORT void btSoftBody_Joint_setSdrift(btSoftBody_Joint* obj, void value);
	EXPORT void btSoftBody_Joint_setSplit(btSoftBody_Joint* obj, btScalar value);

	EXPORT void btSoftBody_Joint_Solve(btSoftBody_Joint* obj, btScalar dt, btScalar sor);

	EXPORT void btSoftBody_Joint_Terminate(btSoftBody_Joint* obj, btScalar dt);

	EXPORT void btSoftBody_Joint_Type(btSoftBody_Joint* obj);

	EXPORT void btSoftBody_Joint_delete(btSoftBody_Joint* obj);