src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		public Body(Cluster p)
		{
			_native = btSoftBody_Body_new3(p._native);
		}

		public void Activate()
		{
			btSoftBody_Body_activate(_native);
		}

		public void AngularVelocity(Vector3 rpos)
		{
			btSoftBody_Body_angularVelocity(_native, ref rpos);
		}

		public void AngularVelocity()
		{
			btSoftBody_Body_angularVelocity2(_native);
		}

		public void ApplyAImpulse(Impulse impulse)
		{
			btSoftBody_Body_applyAImpulse(_native, impulse._native);
		}

		public void ApplyDAImpulse(Vector3 impulse)
		{
			btSoftBody_Body_applyDAImpulse(_native, ref impulse);
		}

		public void ApplyDCImpulse(Vector3 impulse)
		{
			btSoftBody_Body_applyDCImpulse(_native, ref impulse);
		}

		public void ApplyDImpulse(Vector3 impulse, Vector3 rpos)
		{
			btSoftBody_Body_applyDImpulse(_native, ref impulse, ref rpos);
		}

		public void ApplyImpulse(Impulse impulse, Vector3 rpos)
		{
			btSoftBody_Body_applyImpulse(_native, impulse._native, ref rpos);
		}

		public void ApplyVAImpulse(Vector3 impulse)
		{
			btSoftBody_Body_applyVAImpulse(_native, ref impulse);
		}

		public void ApplyVImpulse(Vector3 impulse, Vector3 rpos)
		{
			btSoftBody_Body_applyVImpulse(_native, ref impulse, ref rpos);
		}

		public float InvMass()
		{
			return btSoftBody_Body_invMass(_native);
		}
        /*
		public Matrix InvWorldInertia()
		{
			return btSoftBody_Body_invWorldInertia(_native);
		}
        */
		public void LinearVelocity()
		{
			btSoftBody_Body_linearVelocity(_native);
		}

		public void Velocity(Vector3 rpos)
		{
			btSoftBody_Body_velocity(_native, ref rpos);
		}
        /*
		public Matrix Xform()
		{
			return btSoftBody_Body_xform(_native);
		}
        */
		public CollisionObject CollisionObject
		{
            get { return CollisionObject.GetManaged(btSoftBody_Body_getCollisionObject(_native)); }
			set { btSoftBody_Body_setCollisionObject(_native, value._native); }
		}

		public RigidBody Rigid
		{
			get { return CollisionObject.GetManaged(btSoftBody_Body_getRigid(_native)) as RigidBody; }
			set { btSoftBody_Body_setRigid(_native, value._native); }
		}

		public Cluster Soft
		{
			get { return new Cluster(btSoftBody_Body_getSoft(_native)); }
			set { btSoftBody_Body_setSoft(_native, value._native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Body_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Body()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_new2(IntPtr colObj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_new3(IntPtr p);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_activate(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_angularVelocity(IntPtr obj, [In] ref Vector3 rpos);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_angularVelocity2(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyAImpulse(IntPtr obj, IntPtr impulse);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyDAImpulse(IntPtr obj, [In] ref Vector3 impulse);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyDCImpulse(IntPtr obj, [In] ref Vector3 impulse);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyDImpulse(IntPtr obj, [In] ref Vector3 impulse, [In] ref Vector3 rpos);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyImpulse(IntPtr obj, IntPtr impulse, [In] ref Vector3 rpos);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyVAImpulse(IntPtr obj, [In] ref Vector3 impulse);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_applyVImpulse(IntPtr obj, [In] ref Vector3 impulse, [In] ref Vector3 rpos);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_getCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_getRigid(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_getSoft(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Body_invMass(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_invWorldInertia(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_linearVelocity(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_setCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_setRigid(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_setSoft(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_velocity(IntPtr obj, [In] ref Vector3 rpos);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Body_xform(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Body_delete(IntPtr obj);
	}

	public class Joint
	{
		public class eType
		{
			internal IntPtr _native;

			internal eType(IntPtr native)
			{
				_native = native;
			}

			public eType()
			{
				_native = btSoftBody_Joint_eType_new();
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btSoftBody_Joint_eType_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~eType()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btSoftBody_Joint_eType_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_Joint_eType_delete(IntPtr obj);
		}

		public class Specs
		{
			internal IntPtr _native;

			internal Specs(IntPtr native)
			{
				_native = native;
			}

			public Specs()
			{
				_native = btSoftBody_Joint_Specs_new();
			}

			public float Cfm
			{
				get { return btSoftBody_Joint_Specs_getCfm(_native); }
				set { btSoftBody_Joint_Specs_setCfm(_native, value); }
			}

			public float Erp
			{
				get { return btSoftBody_Joint_Specs_getErp(_native); }
				set { btSoftBody_Joint_Specs_setErp(_native, value); }
			}

			public float Split
			{
				get { return btSoftBody_Joint_Specs_getSplit(_native); }
				set { btSoftBody_Joint_Specs_setSplit(_native, value); }
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btSoftBody_Joint_Specs_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~Specs()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btSoftBody_Joint_Specs_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btSoftBody_Joint_Specs_getCfm(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btSoftBody_Joint_Specs_getErp(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btSoftBody_Joint_Specs_getSplit(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_Joint_Specs_setCfm(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_Joint_Specs_setErp(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_Joint_Specs_setSplit(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btSoftBody_Joint_Specs_delete(IntPtr obj);
		}

		internal IntPtr _native;

		internal Joint(IntPtr native)
		{
			_native = native;
		}

		public void Prepare(float dt, int iterations)
		{
			btSoftBody_Joint_Prepare(_native, dt, iterations);
		}

		public void Solve(float dt, float sor)
		{
			btSoftBody_Joint_Solve(_native, dt, sor);
		}

		public void Terminate(float dt)
		{
			btSoftBody_Joint_Terminate(_native, dt);
		}

		public void Type()
		{
			btSoftBody_Joint_Type(_native);
		}
        /*
		public Body Bodies
		{
			get { return btSoftBody_Joint_getBodies(_native); }
			set { btSoftBody_Joint_setBodies(_native, value._native); }
		}
        */
		public float Cfm
		{
			get { return btSoftBody_Joint_getCfm(_native); }
			set { btSoftBody_Joint_setCfm(_native, value); }
		}

		public bool Delete
		{
			get { return btSoftBody_Joint_getDelete(_native); }
			set { btSoftBody_Joint_setDelete(_native, value); }
		}
        /*
		public void Drift
		{
			get { return btSoftBody_Joint_getDrift(_native); }
			set { btSoftBody_Joint_setDrift(_native, value._native); }
		}
        */
		public float Erp
		{
			get { return btSoftBody_Joint_getErp(_native); }
			set { btSoftBody_Joint_setErp(_native, value); }
		}
        /*
		public void Massmatrix
		{
			get { return btSoftBody_Joint_getMassmatrix(_native); }
			set { btSoftBody_Joint_setMassmatrix(_native, value._native); }
		}

		public Vector3 Refs
		{
			get
			{
				Vector3 value;
				btSoftBody_Joint_getRefs(_native, out value);
				return value;
			}
			set { btSoftBody_Joint_setRefs(_native, ref value); }
		}

		public void Sdrift
		{
			get { return btSoftBody_Joint_getSdrift(_native); }
			set { btSoftBody_Joint_setSdrift(_native, value._native); }
		}
        */
		public float Split
		{
			get { return btSoftBody_Joint_getSplit(_native); }
			set { btSoftBody_Joint_setSplit(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Joint_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Joint()
		{
			Dispose(false);
		}
